--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
+*:root{
+ padding: 0;
+ margin: 0;
+}
+
 .hero{
+  width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     background: rgb(5,0,51);
     background: linear-gradient(90deg, rgba(5,0,51,1) 0%, rgba(121,9,120,1) 35%, rgba(4,206,248,1) 100%); 
 }
+#key{
+  color: black;
+  font-family: 'Roboto Slab', serif;
+}
 .head{
-    background: #000;
-    width: 100vw;
+    background: #191919;
     padding: 20px;
     padding-bottom: 10px;
     text-align: center;
@@ -68,7 +77,7 @@ p{
 
     height: 445px;
     width: 445px;
-    margin-top: 10px;
+    margin-top: 5px;
 
 }
 .inner{
@@ -115,8 +124,7 @@ p{
   }
 
   .footer{
-    background: #000;
-    width: 100vw;
+    background: #171717;
     padding: 20px;
     padding-bottom: 40px;
     text-align: center;
