--- a/style.css
+++ b/style.css
@@ -129,3 +129,9 @@ p{
     padding-bottom: 40px;
     text-align: center;
 }
+
+.right-row{
+  display: flex;
+  justify-content: end;
+  margin-right: 20px;
+}
