--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 750px;
-    height: 600px;
+    width: 60%;
+    height: 100%;
     color: aliceblue;
     font-family: 'Roboto Slab', serif;
     font-size: larger;
@@ -52,8 +52,8 @@ p{
     margin: 50px;
     padding: 10px;
     margin-left: 100px;
-    height: 500px;
-    width: 500px;
+    height: 80%;
+    width: 40%;
 
     /* background - foreground */
     background-color:rgb(221, 232, 244);
@@ -66,8 +66,6 @@ p{
     /* arranging quadrants */
     display: flex;
     flex-direction: column;
-
-
 }
 
 /* inner quadrants formatting */
